get rid of space before Environment

--- a/clear/Vagrantfile
+++ b/clear/Vagrantfile
@@ -18,8 +18,7 @@ Vagrant.configure("2") do |config|
     swapoff -a
     echo "127.0.0.1 localhost `hostname`" > /etc/hosts
     mkdir /etc/systemd/system/docker.service.d/
-    echo '[Service]
-    Environment="DOCKER_DEFAULT_RUNTIME=--default-runtime runc"' > /etc/systemd/system/docker.service.d/51-runtime.conf
+    echo '[Service]\nEnvironment="DOCKER_DEFAULT_RUNTIME=--default-runtime runc"' > /etc/systemd/system/docker.service.d/51-runtime.conf
 
     sudo systemctl daemon-reload
     sudo systemctl restart docker
