--- a/clear/Vagrantfile
+++ b/clear/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "AntonioMeireles/ClearLinux"
   config.vm.network "private_network", type: "dhcp"
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = "2048"
+    vb.memory = "4096"
   end
   config.vm.provision "shell", inline: <<-SHELL
     usermod -aG docker clear
@@ -20,8 +20,15 @@ Vagrant.configure("2") do |config|
     mkdir /etc/systemd/system/docker.service.d/
     echo '[Service]\nEnvironment="DOCKER_DEFAULT_RUNTIME=--default-runtime runc"' > /etc/systemd/system/docker.service.d/51-runtime.conf
 
-    sudo systemctl daemon-reload
-    sudo systemctl restart docker
-    sudo systemctl restart kubelet
+    systemctl daemon-reload
+    systemctl restart docker
+    systemctl restart kubelet
+    
+    systemctl start crio
+    systemctl start kubelet
+    systemctl daemon-reload
+    systemctl restart docker
+    systemctl restart crio
+    systemctl restart kubelet
   SHELL
 end
