--- a/clear/Vagrantfile
+++ b/clear/Vagrantfile
@@ -13,23 +13,25 @@ Vagrant.configure("2") do |config|
     mkdir /etc/sysctl.d
     echo "net.ipv4.ip_forward = 1" > /etc/sysctl.d/60-k8s.conf
     systemctl restart systemd-sysctl.service
-    systemctl enable crio.service
+    #systemctl enable crio.service
     systemctl enable kubelet.service
     systemctl mask $(sed -n -e 's#^/dev/\([0-9a-z]*\).*#dev-\1.swap#p' /proc/swaps) 2>/dev/null
     swapoff -a
     echo "127.0.0.1 localhost `hostname`" > /etc/hosts
     mkdir /etc/systemd/system/docker.service.d/
     echo '[Service]\nEnvironment="DOCKER_DEFAULT_RUNTIME=--default-runtime runc"' > /etc/systemd/system/docker.service.d/51-runtime.conf
+    mkdir /etc/systemd/system/kubelet.service.d/
+    echo '[Service]\nEnvironment="KUBELET_EXTRA_ARGS="' > /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
 
     systemctl daemon-reload
     systemctl restart docker
     systemctl restart kubelet
     
-    systemctl start crio
+    #systemctl start crio
     systemctl start kubelet
     systemctl daemon-reload
     systemctl restart docker
-    systemctl restart crio
+    #systemctl restart crio
     systemctl restart kubelet
   SHELL
 end
