Comment `kubeadm init` command

--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -22,12 +22,12 @@ IPADDR=`ifconfig enp0s8 | grep Mask | awk '{print $2}'| cut -f2 -d:`
 echo This VM has IP address $IPADDR
 # Set up Kubernetes
 NODENAME=$(hostname -s)
-kubeadm init --apiserver-cert-extra-sans=$IPADDR  --node-name $NODENAME
-# Set up admin creds for the vagrant user
-echo Copying credentials to /home/vagrant...
-sudo --user=vagrant mkdir -p /home/vagrant/.kube
-cp -i /etc/kubernetes/admin.conf /home/vagrant/.kube/config
-chown $(id -u vagrant):$(id -g vagrant) /home/vagrant/.kube/config
+# kubeadm init --apiserver-cert-extra-sans=$IPADDR  --node-name $NODENAME
+# # Set up admin creds for the vagrant user
+# echo Copying credentials to /home/vagrant...
+# sudo --user=vagrant mkdir -p /home/vagrant/.kube
+# cp -i /etc/kubernetes/admin.conf /home/vagrant/.kube/config
+# chown $(id -u vagrant):$(id -g vagrant) /home/vagrant/.kube/config
 SCRIPT
 
 Vagrant.configure("2") do |config|
