--- a/ubuntu/Vagrantfile
+++ b/ubuntu/Vagrantfile
@@ -28,6 +28,8 @@ NODENAME=$(hostname -s)
 # sudo --user=vagrant mkdir -p /home/vagrant/.kube
 # cp -i /etc/kubernetes/admin.conf /home/vagrant/.kube/config
 # chown $(id -u vagrant):$(id -g vagrant) /home/vagrant/.kube/config
+apt-get install bash-completion
+echo "source <(kubectl completion bash)" >> /home/vagrant/.bashrc
 SCRIPT
 
 Vagrant.configure("2") do |config|
